About me text spacing fixed

--- a/Portfolio/src/app/AboutMe/about-me/about-me.component.css
+++ b/Portfolio/src/app/AboutMe/about-me/about-me.component.css
@@ -1,6 +1,5 @@
 .aboutme{
     display: flex;
-    position: relative; 
     width: 100%;
 }
 
@@ -9,8 +8,12 @@
 }
 
 .info{
+    display: flex;
     animation: fadeIn 5s;
     animation-fill-mode: backwards;
+    width: 100%;
+    height: 100%;
+    margin-left: 60px;
 }
 
 @keyframes fadeIn {
@@ -22,11 +25,6 @@
     }
   }
 
-.form.scroll{
-    overflow-x: hidden;
-    overflow-y: auto;
-}
-
 .home{
     background-color: var(--background-color);
     border: none;
@@ -36,7 +34,6 @@
     text-align: left;
     margin-top: 40px;
     margin-left: 40px;
-
 }
 
 .homeLink{
@@ -48,21 +45,16 @@
     display: flex;
     position: relative;
     font-size: 24px;
-    height: 10%;
     width: 100%;
     animation: fadeIn 0.5s;
     animation-fill-mode: backwards;
     margin-bottom: 40px;
 }
 
-::ng-deep body{
-    overflow-y: auto;
-}
-
 .innerContent{
     display: flex;
-    position: relative;
     width: 100%;
+    height: 100%;
 }
 
 .home:hover{
@@ -96,20 +88,36 @@
     position: relative;
     flex-direction: column;
     float: left;
-    height: 100%;
     width: 60%;
-    margin-left: 20px;
-    margin-right: 20px;
+    overflow-y: auto;
+    max-height: 32.5%;
+    margin-bottom: 40px;
+    padding-right: 40px;
 }
 
+.aboutText::-webkit-scrollbar{
+    width: 15px;
+}
+
+.aboutText::-webkit-scrollbar-track{
+    width: 15px;
+    border-radius: 20px;
+    background-color: var(--background-color);
+    box-shadow: -0.5px -0.5px 1px rgba(108, 105, 255, 0.25), inset 2px 4px 12px rgba(0, 0, 0, 0.7), inset -2px -4px 8px #6C69FF;
+}
+
+.aboutText::-webkit-scrollbar-thumb{
+    width: 15px;
+    border-radius: 20px;
+    background-color: var(--background-color);
+    box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.25), inset 0px -2px 6px #0F0E3E, inset -0.5px -2px 8px #0F0E3E, inset 2px 2px 4px #0F0E3E, inset 2px -4px 10px rgba(108, 105, 255, 0.8), inset 3px 6px 10px #6C69FF;
+}
 .photo{
     display: flex;
-    position: relative;
     justify-content: center;
-    height: 100%;
+    max-height: 32.5%;
     width: 40%;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-right: 60px;
 }
 
 button{
@@ -120,8 +128,8 @@ button{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 300px;
-    height: 521px;
+    width: 340px;
+    height: 591px;
     border-radius: 20px;
     text-align: center;
     box-shadow: inset 6px 6px 15px rgba(0, 0, 0, 0.8), inset -4px -4px 15px #4644BF;
@@ -132,6 +140,24 @@ button{
     margin: auto;
     margin-top:auto;
     margin-bottom:auto;
-    width: 252px;
-    height: 473px;
+    width: 285px;
+    height: 536px;
+}
+
+.about{
+    font-size: 32px;
+    font-family: 'Bangers', cursive;
+    text-align: left;
+    margin-left: 40px;
+    color: var(--secondary);
+}
+
+.aboutparagraph{
+    font-size: 16px;
+    color: var(--primary-white);
+    line-height: 25px;
+    text-align:justify;
+    margin-left: 40px;
+    font-family: 'Calibri';
+    max-width: 100%;
 }
