--- a/Portfolio/src/styles.css
+++ b/Portfolio/src/styles.css
@@ -6,7 +6,7 @@
     --primary-black: #000000;
     --primary-white: #ffffff;
     --primary: #5526C4;
-    --seconddary: #2ADB66;
+    --secondary: #2ADB66;
     --background: #0F0E3E;
 }
 
